# rhxd

./: .gitignore  BUGFIXES.md  Cargo.toml  README.md  READY-TO-TEST.md  TESTING.md  start-server.sh  test-connection.py  test-server.json
.opencode/: AGENTS.md
crates/rhxcore/: Cargo.toml
crates/rhxcore/src/: error.rs  lib.rs  password.rs
crates/rhxcore/src/codec/: date.rs  field_codec.rs  mod.rs  transaction_codec.rs
crates/rhxcore/src/protocol/: constants.rs  field.rs  handshake.rs  mod.rs  transaction.rs  types.rs
crates/rhxcore/src/types/: access.rs  chat.rs  file.rs  mod.rs  user.rs
crates/rhxd/: Cargo.toml
crates/rhxd/migrations/: 001_initial.sql
crates/rhxd/src/: config.rs  lib.rs  main.rs  server.rs  state.rs
crates/rhxd/src/cli/: account.rs  db.rs  info.rs  init.rs  mod.rs  serve.rs
crates/rhxd/src/connection/: handler.rs  mod.rs  session.rs  transaction_helpers.rs
crates/rhxd/src/console/: commands.rs  mod.rs
crates/rhxd/src/db/: accounts.rs  files.rs  mod.rs  schema.rs  schema.sql
crates/rhxd/src/handlers/: account.rs  agreed.rs  chat.rs  login.rs  mod.rs  user_info.rs  user_list.rs
crates/rhxd/tests/: server_tests.rs
crates/rhxtrackd/: Cargo.toml
crates/rhxtrackd/migrations/: 001_initial.sql
crates/rhxtrackd/src/: config.rs  lib.rs  main.rs  server.rs
crates/rhxtrackd/src/cli/: db.rs  info.rs  init.rs  mod.rs  serve.rs  server.rs
docs/: ACCESS_BITS.md  ACCESS_BITS_FIX.md  API.md  GETCLIENTINFOTEXT.md  PROTOCOL.md  SESSION_NOTES_2026-02-01.md
examples/: echo_bot.rs  file_browser.rs  simple_bot.rs
