[workspace]
resolver = "2"
members = [
    "crates/rhxcore",
    "crates/rhxd",
    "crates/rhxtrackd",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/rhxd"

[workspace.dependencies]
# Shared dependencies across crates
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bytes = "1.11"
bitflags = "2.10"
chrono = { version = "0.4.43", features = ["serde"] }

# Workspace crates
rhxcore = { path = "crates/rhxcore" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
