[package]
name = "rhxd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rhxd"
path = "src/main.rs"

[dependencies]
rhxcore = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }

# CLI
clap = { version = "4.5.56", features = ["derive"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
futures = "0.3.31"

# Concurrent data structures
dashmap = "6.1"

# Random password generation
rand = "0.9.2"

# Signal handling
signal-hook = "0.4.3"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }

# Cross-platform directories
dirs = "6"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
