[package]
name = "rhxtrackd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rhxtrackd"
path = "src/main.rs"

[dependencies]
rhxcore = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
