[package]
name = "rhxtrackd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rhxtrackd"
path = "src/main.rs"

[dependencies]
rhxcore = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }

# CLI
clap = { version = "4.5.56", features = ["derive"] }

# HTTP server
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
